--- a/assets/css/index-Pv7EdNto.css
+++ b/assets/css/index-Pv7EdNto.css
@@ -127,22 +127,22 @@ button {
   top: 0;
   right: 0;
   margin: 1rem;
-  width: 2.5rem;
-  height: 2.5rem;
+  padding: 0;
+  width: 2rem;
+  height: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: transparent;
   border: none;
-  cursor: pointer;
+  background: transparent;
 }
 
 .theme-switcher-btn i.bi {
-  font-size: 1.5rem;
-  width: 1.5rem; /* Match link-card icons */
+  width: 1.5rem;
   height: 1.5rem;
-  display: inline-block;
-  color: var(--button-text);
+  line-height: 1.5rem;
+  display: block;
+  font-size: 1.5rem;
 }
 
 .theme-switcher-btn:hover i.bi {
