--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,7 @@ button {
   display: block;
   width: 6.25rem;
   height: 6.25rem;
-  margin: 0 auto 1rem;
+  margin: 0 auto 0.5rem; /* Reduced from 1rem to 0.5rem (8px) */
   overflow: hidden;
 }
 
@@ -179,7 +179,7 @@ button {
   font-weight: 600;
   letter-spacing: -0.09rem;
   line-height: 1.2;
-  margin: 0.625rem 0 0;
+  margin: 0.25rem 0 0; /* Reduced from 0.625rem to 0.25rem (4px) */
 }
 
 .profile-description {
